// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mykeels/mee-karaoke components/SongCreator/components/ImageGallery Active Blank 1`] = `
Array [
  <div
    className="inline-block lg:flex bg-pink preview relative w-5/12 lg:w-full"
  >
    <img
      className="block w-full h-full rounded border-2 border-purple-200"
    />
  </div>,
  <div
    className="px-2 lg:py-2 inline-block"
  />,
  <div
    className="inline-block lg:block rounded overflow-auto image-slider-wrapper w-7/12 lg:w-full px-4 lg:px-0"
  >
    <div
      className="block image-slider"
      style={
        Object {
          "width": "0px",
        }
      }
    >
      <ul
        className="list-none"
      />
    </div>
  </div>,
]
`;

exports[`@mykeels/mee-karaoke components/SongCreator/components/ImageGallery Blank 1`] = `
Array [
  <div
    className="inline-block lg:flex bg-pink preview relative w-5/12 lg:w-full"
  >
    <img
      className="block w-full h-full rounded border-2 border-purple-100"
    />
  </div>,
  <div
    className="px-2 lg:py-2 inline-block"
  />,
  <div
    className="inline-block lg:block rounded overflow-auto image-slider-wrapper w-7/12 lg:w-full px-4 lg:px-0"
  >
    <div
      className="block image-slider"
      style={
        Object {
          "width": "0px",
        }
      }
    >
      <ul
        className="list-none"
      />
    </div>
  </div>,
]
`;

exports[`@mykeels/mee-karaoke components/SongCreator/components/ImageGallery Index 1`] = `
Array [
  <div
    className="inline-block lg:flex bg-pink preview relative w-5/12 lg:w-full"
  >
    <img
      className="block w-full h-full rounded border-2 border-purple-200"
      src="https://images.unsplash.com/photo-1522008342704-6b265b543c37?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=480&ixid=MnwxfDB8MXxyYW5kb218MHx8cmVhZGluZyBib29rc3x8fHx8fDE2NjUzMjQ4Njk&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=640"
    />
    <div
      className="absolute top-0 left-0 w-full h-full flex items-center justify-center"
    >
      <div
        className="h-24 relative w-full text-center flex items-center justify-center"
      >
        <div
          className="h-24 bg-purple-200 w-full z-0 opacity-50 rounded absolute top-0 left-0"
        />
        <div
          className="z-10 relative text-white text-xs lg:text-lg xl:text-xl font-bold p-4"
        >
          I've been reading books of old, The legends and the myths, Achilles and his Gold
        </div>
      </div>
    </div>
  </div>,
  <div
    className="px-2 lg:py-2 inline-block"
  />,
  <div
    className="inline-block lg:block rounded overflow-auto image-slider-wrapper w-7/12 lg:w-full px-4 lg:px-0"
  >
    <div
      className="block image-slider"
      style={
        Object {
          "width": "176px",
        }
      }
    >
      <ul
        className="list-none"
      >
        <li
          className="inline-block py-1 px-1"
        >
          <img
            className="shadow rouded border-2 gallery-image-0 border-white"
            src="https://images.unsplash.com/photo-1522008342704-6b265b543c37?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=480&ixid=MnwxfDB8MXxyYW5kb218MHx8cmVhZGluZyBib29rc3x8fHx8fDE2NjUzMjQ4Njk&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=640"
          />
        </li>
      </ul>
    </div>
  </div>,
]
`;
